--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grommet-reader",
+  "name": "cyoa-reader",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,17 +21,5 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
